# android_agent

./: .gitignore  english_agent.py  java_agent.cpp  java_agent.txt  java_agent_design.txt  maxsizesm.cpp  maxsizesm.h  state_machine.cpp  state_machine.txt  statemachine.h  vocab.txt
comic_studio/: auto_ask.py  comic_job.py  comic_studio.py  comic_studio.txt  cs.py  cursesApp1.py  curses_menuex1.py  formular.txt  pycursesex2.py  sm.py  ui.py
comic_studio/app/: .gitignore  AIAgent.cpp  AIAgent.h  Makefile  comicdb.cpp  comicdb.h  comicutil.cpp  comicutil.h  main.cpp  state_machine.txt  tmenu.cpp  tmenu.h
comic_studio/charming_python_7/: charming_python_7.txt  curses_txt2html.py  dmTxt2Html.py
comic_studio/core/: concept.py  scanning_folder.py
fast_metrics/design/: QA.txt  QA1.txt
fast_metrics/ide/FastMetrics/: .cproject  .project  CMakeLists.txt
fast_metrics/ide/FastMetrics/src/: FastMetrics.cpp
fast_metrics/src/: main.cpp
ncurses/: BUILD.txt  curses_ex1.py  custom_autocomplete.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex19.cpp  ex2.cpp  ex20.cpp  ex21.cpp  ex22.cpp  ex23.cpp  ex24.cpp  ex25.cpp  ex26.cpp  ex27.cpp  ex28.cpp  ex3.cpp  ex4.cpp  ex4.py  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  hello.py  helloworld.cpp  x.c
printer_problem/: printer_prob.py  printer_prob_A5.py
smoothworker/: main.py  primitive_prob.py
spidervnAccel/scripts/: bulk_make_image_quality.sh  crop_quarter.sh  make_comic_avatar.sh  make_image_quality.sh  make_pdf.sh
video_manipulator/: ffmpeg.txt
(+74 files in other folders)
